Se separó el módulo de agregarMiembrosProyecto de ProyectoManager. Para la administración de miembros de proyecto, miembros de comite y roles de proyecto se hará uso de un comboBox para seleccionar el proyecto sobre el que se trabajará (ya fue implementado).

--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -67,8 +67,15 @@
 					</li>
 				{% endif %}
 				{% if 'rolPL' in session %}
-				<li><a href="{{url_for('proyectoManager')}}">Proyecto
-						Manager</a></li>
+				<li><a href="#">Proyecto Manager</a>
+					<ul>
+						<li><a href="{{url_for('proyectoManager')}}">Administrar Proyectos</a>
+						<li><a href="{{url_for('miembroManager')}}">Administrar Miembros</a>
+						<li><a href="#">Administrar Comite</a>
+						<li><a href="{{url_for('rolProyectoManager')}}">Administrar Roles</a>
+					</ul>
+				
+				</li>
 				{% endif %}
 				<li><a href="#">Desarrollo</a>
 					<ul>
