--- a/my/templates/proyectoManager.html
+++ b/my/templates/proyectoManager.html
@@ -919,15 +919,13 @@
 				value="Nuevo" onclick='agregar()' /> <input id="btModificar"
 				type="button" name="detalle" onclick='modificar();'
 				value="Modificar" /> <input id="btConsultar" type="button"
-				name="consultar" value="Consultar" onclick='consultar()' /> <input
-				id="btAgregarMiembros" type="button" name="agregarMiembrosButton"
-				value="Agregar Miembros Proyecto" onclick='abrirDialogoMiembros()' />
+				name="consultar" value="Consultar" onclick='consultar()' /> 
 			<br></br>
 			<script>
 				$("#btAgregar").button();
 				$("#btModificar").button();
 				$("#btConsultar").button();
-				$("#btAgregarMiembros").button();
+				
 			</script>
 		</div></td>
 
