problemas con agregarPermisoRoles. Tengo un BAD REQUEST.

--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -70,6 +70,7 @@
 				<li><a href="#">Proyecto Manager</a>
 					<ul>
 						<li><a href="{{url_for('proyectoManager')}}">Administrar Proyectos</a>
+						<li><a href="{{url_for('faseManager')}}">Administrar Fases</a>
 						<li><a href="{{url_for('miembroManager')}}">Administrar Miembros</a>
 						<li><a href="#">Administrar Comite</a>
 						<li><a href="{{url_for('rolProyectoManager')}}">Administrar Roles</a>
@@ -87,7 +88,6 @@
 					<ul>
 						<li><a href="#">Linea Base Manager</a>
 						<li><a href="#">Tipo Item Manager</a>
-						<li><a href="{{url_for('faseManager')}}">Fases Manager</a>
 					</ul></li> {% else %} {% endif %}
 			</ul>
 	</div>
