--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -67,8 +67,8 @@
 					<td><select id="proyectosUsuario"
 						style="display: block; margin-bottom: 12px; padding: 0.4em; width: 100%;"
 						class="ui-widget-content ui-corner-all">
-							<option value="activo">Activo</option>
-							<option value="finalizado">Inactivo</option>
+							<option value="activo">Ninguno</option>
+							
 					</select></td>
 				</tr>
 			</table>
@@ -79,28 +79,71 @@
 	</div>
 	
 	<script>
-	
+		var valorenSesion=0;
 		$.getJSON("http://localhost:5000/listarProyectosComboBox", function(atribs) {
 		  
-		var select = $('#proyectosUsuario');
-		var options = select.prop('options');
-		//alert ('hola')
-		var newOptions = {
-			    'red' : 'Red',
-			    'blue' : 'Blue',
-			    'green' : 'Green',
-			    'yellow' : 'Yellow'
-			};
-		$('option', select).remove();
-
-		$.each(atribs, function(index,atrib) { //val,text
-		    options[options.length] = new Option(atrib.nombreProyecto,atrib.idProyecto);
-		});
-		//select.val(selectedOption);
-		  //);
-		 
+			var select = $('#proyectosUsuario');
+			var options = select.prop('options');
+			//alert ('hola')
+			
+			$('option', select).remove();
+			options[options.length] = new Option('Seleccione Proyecto',0);
+			$.each(atribs, function(index,atrib) { //val,text
+			    options[options.length] = new Option(atrib.nombreProyecto,atrib.idProyecto);
+			});
+			//valorEnSesion={{session['idProyecto']}};
+			//select.val(valorEnSesion);
+			elegirSesionProyecto(select.val())
+			
 		 });
+		function elegirSesionProyecto(idProyecto){
+				valorelegido=$('#proyectosUsuario').val();
+				//alert('valor elegido' + valorelegido)
+				//alert('valor en sesion '+ valorenSesion)
+				if(valorenSesion!=valorelegido){ //si es que el valor del combo actual es diferente  
+													//del seleccionado, se hace el post y reload de la pagina, la primera vez el de la sesion es 0
+				valorenSesion=valorelegido;
+				$.post('/seleccionarProyectoSesion/',
+						{ /* se indican los parametros*/
+							idProyecto : idProyecto
+						},
+						function(data, status) {
+							/* funcion que maneja el resultruc : $("#ruc").val(),ado de la invocación */
 		
+							/* si hay error se muestra el mensaje*/
+							if (data.substring(0, 1) == 't') {
+								mostrarMensaje(
+										"Error",data.substring(2));
+								/* se indica que no hubieron errores */
+							}
+							/* se indicar la recarga de la tabla */
+							//location.reload();
+							var pathname = window.location.pathname;
+							switch (pathname){
+								case '/faseManager/':
+									$("#listaFases").trigger("reloadGrid");
+									break;
+								case '/usuarioManager/':
+									$('#list').trigger("reloadGrid");
+									break;
+								case'/proyectoManager/':
+									$('#list').trigger("reloadGrid");
+									break;
+								case'/tipoItemManager/':
+									cargarFasesEnComboBox();
+									break;
+								default:
+									alert('no te olvides agregar para que actualice el jqgrid en el if de base')
+							}
+							
+						});
+				
+				}
+		}
+		$('#proyectosUsuario').change(function() {
+			    $("#proyectosUsuario option[value='0']").remove();
+			  elegirSesionProyecto($('#proyectosUsuario').val())
+		});
 		//var selectedOption = 'green';
 
 		
