--- a/my/templates/rolProyectoManager.html
+++ b/my/templates/rolProyectoManager.html
@@ -6,10 +6,84 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="text/javascript">
-	//<![CDATA[
+	/*###################################################################*/
+	function cargaCombo(){
+		$.getJSON("http://localhost:5000/listarProyectoCombo", function(atribs) {
+
+			var select = $('#comboProyecto');
+			var options = select.prop('options');
+			//alert ('hola')
+			
+			$('option', select).remove();
+			options[0] = new Option("--Seleccione un proyecto--","0");
+			var index=0
+			$.each(atribs, function(index,atrib) {
+			index=index+1;
+			options[options.length] = new Option(index+" : "+atrib.nombreProyecto,atrib.idProyecto);
+			
+			})		
+	})}
+
+	function reloadGridRol(){
+		
+		$("#comboFase option[value='0']").remove();
+		var myPostData = $('#list').jqGrid("getGridParam", "postData");
+		delete myPostData.idFase;
+		//eso borra el idFase actual
+		$('#list').setGridParam({
+		postData: { idFase: comboFaseSeleccion() } });
+		//eso se setea el nuevo valor
+		$('#list').trigger("reloadGrid");
+
+		
+	}
+	function reloadComboFase(){
+		
+		$("#comboProyecto option[value='0']").remove();
+		cargaComboFase();
+	}
+	
+	function cargaComboFase(){
+		$.post('/listarComboFases/',
+				{ /* se indican los parametros*/
+					idProyecto :$('#comboProyecto').val()
+				},
+				function(data, status) {
+					var select = $('#comboFase');
+					var options = select.prop('options');
+					
+					$('option', select).remove();
+					options[0] = new Option("--Seleccione una Fase--","0");
+					var index=0
+					
+					data = $.parseJSON( data );
+					//var jsonData = JSON.stringify(eval("(" + data + ")"));
+					$.each(data, function(index,fase) {
+						index=index+1;
+						options[options.length] = new Option(index+" : "+fase.nombreFase,fase.idFase);
+					})
+				}
+			);		
+	}
+	
+	function comboProyectoSeleccion()
+	{
+		return $('#comboProyecto').val()
+		
+	}
+	
+	function comboFaseSeleccion()
+	{
+		return $('#comboFase').val()
+		
+	}
+	
+
+	/*#####################################################################*/
 	jQuery(document).ready(
 			function() {
-
+				
+				cargaCombo()
 				var grid = jQuery("#list").jqGrid(
 						{
 
@@ -18,10 +92,12 @@
 							url : 'http://localhost:5000/listarRolProyecto',
 							datatype : "json",
 							mtype : "get",
+							postData: { idFase : comboFaseSeleccion()},
 							show : {
 								effect : 'fade',
 								duration : 200
 							},
+							
 							hide : {
 								effect : 'fade',
 								duration : 200
@@ -75,7 +151,9 @@
 					searchOnEnter : false,
 					defaultSearch : "cn"
 				});
-			});
+			}
+					
+	);
 	//]] 
 </script>
 
@@ -87,7 +165,15 @@
 }
 </style>
 
+
+
+
 <div id="dialogo-rolProyecto" title="Roles de proyecto">
+
+
+
+
+
 	<form title="(*) campos obligatorios">
 		<fieldset class="fieldset">
 
@@ -359,6 +445,7 @@
 						modal : true,
 						overflow : scroll,
 						resizable : false,
+						
 						width : 'auto',
 						
 						show : {
@@ -384,6 +471,8 @@
 														nombre : $(
 																"#nombre")
 																.val(),
+														idFase : $(
+														"#comboFase").val(),		
 														descripcion : $("#descripcion").val()
 														},
 														function(data, status) {
@@ -591,6 +680,30 @@
 <div id='msgbox' title='' style='display: none'></div>
 
 {% endblock %} {% block body %}
+
+
+<div>
+<label for="comboProyecto" style="display: block ; padding: 0.4em; float:left ">Administrar un proyecto</label> 
+<select id="comboProyecto" onchange="reloadComboFase()"
+style="display: block; margin-bottom: 12px; padding: 0.4em;"
+class="ui-widget-content ui-corner-all">
+ <option value="0">--Seleccione una fase--</option>
+ <option value="1">fase1</option>
+ <option value="2">fase2</option>
+
+</select>
+</div>
+<br></br>
+
+<div>
+<label for="comboFase" style="display: block ; padding: 0.4em; float:left ">Fase a administrar</label> 
+<select id="comboFase" onchange="reloadGridRol()"
+style="display: block; margin-bottom: 12px; padding: 0.4em;"
+class="ui-widget-content ui-corner-all">
+</select>
+</div>
+<br></br>
+
 
 <tr>
 	<td><div>
