--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -72,6 +72,7 @@
 						<li><a href="{{url_for('proyectoManager')}}">Administrar Proyectos</a>
 						<li><a href="{{url_for('faseManager')}}">Administrar Fases</a>
 						<li><a href="{{url_for('miembroManager')}}">Administrar Miembros</a>
+						<li><a href="{{url_for('rolUsuarioManager')}}">Administrar Roles Usuarios</a> 
 						<li><a href="#">Administrar Comite</a>
 						<li><a href="{{url_for('rolProyectoManager')}}">Administrar Roles</a>
 					</ul>
