--- a/my/templates/rolUsuarioManager.html
+++ b/my/templates/rolUsuarioManager.html
@@ -166,6 +166,127 @@ jQuery(document).ready(
 				
 );
 
+
+function Agregar (){
+	/* se pregunta si es que se selecciono la fila en proyectos, y en lel grid de users */
+	var rowRol = $('#list').jqGrid(
+			'getGridParam', 'selrow');
+	if (rowRol == null) {
+		mostrarMensaje("Atencion",
+				"Seleccione el Rol a agregar");
+		return;
+	}
+	var rowdataRoles = $('#list')
+			.getRowData(rowRol);
+
+	if (rowdataRoles.enUsuario == 'Si') {
+		mostrarMensaje("Atencion",
+				"No se puede asignar el Rol. Ya se encuentra asignado");
+	}
+	/* se indica la URL */
+	$
+			.post(
+					'/agregarRolUsuario/',
+					{ /* se indican los parametros*/
+						idRol : rowdataRoles.idRol,
+						idUsuario : $('#comboUsuario').val()
+
+					},
+					function(data, status) {
+						/* funcion que maneja el resultruc : $("#ruc").val(),ado de la invocación */
+
+						/* si hay error se muestra el mensaje*/
+						if (data.substring(0, 1) == 't') {
+							mostrarMensaje(
+									"Error",
+									"Los datos no se han podido guardar:\n"
+											+ data
+													.substring(2));
+							/* se indica que no hubieron errores */
+						} else {
+							mostrarMensaje(
+									"Exito",
+									data
+											.substring(2));
+						}
+						/* se indicar la recarga de la tabla */
+						$('#list').trigger(
+								"reloadGrid");
+					});
+	
+	
+}
+
+function Quitar (){
+	/* se pregunta si es que se selecciono la fila en proyectos, y en lel grid de users */
+	var rowRol = $('#list').jqGrid(
+			'getGridParam', 'selrow');
+	if (rowRol == null) {
+		mostrarMensaje("Atencion",
+				"Seleccione el Rol a agregar");
+		return;
+	}
+	var rowdataRoles = $('#list')
+			.getRowData(rowRol);
+
+	if (rowdataRoles.enUsuario == 'No') {
+		mostrarMensaje("Atencion",
+				"El rol no pertenece al Usuario");
+	}
+	/* se indica la URL */
+	$
+			.post(
+					'/quitarRolUsuario/',
+					{ /* se indican los parametros*/
+						idRol : rowdataRoles.idRol,
+						idUsuario : $('#comboUsuario').val()
+
+					},
+					function(data, status) {
+						/* funcion que maneja el resultruc : $("#ruc").val(),ado de la invocación */
+
+						/* si hay error se muestra el mensaje*/
+						if (data.substring(0, 1) == 't') {
+							mostrarMensaje(
+									"Error",
+									"Los datos no se han podido guardar:\n"
+											+ data
+													.substring(2));
+							/* se indica que no hubieron errores */
+						} else {
+							mostrarMensaje(
+									"Exito",
+									data
+											.substring(2));
+						}
+						/* se indicar la recarga de la tabla */
+						$('#list').trigger(
+								"reloadGrid");
+					});
+	
+}
+
+
+function mostrarMensaje(titulo, mensaje) {
+	$('#msgbox').text(mensaje);
+	$('#msgbox').dialog({
+		title : titulo,
+		modal : true,
+		show : {
+			effect : 'fade',
+			duration : 250
+		},
+		hide : {
+			effect : 'fade',
+			duration : 200
+		},
+		buttons : {
+			"Ok" : function() {
+				$(this).dialog("close");
+			}
+		}
+	});
+}
 </script>
 
 {% endblock %}
@@ -190,11 +311,28 @@ class="ui-widget-content ui-corner-all">
 <br></br>
 
 
-
-
 <div>
-			<table id="list"></table>
-			<div id="pager"></div>
-		</div>
+	<table id="list"></table>
+	<div id="pager"></div>
+</div>
+
+<div id='msgbox' title='' style='display: none'></div>
+
+<tr>
+	
+	<td><div>
+			<br></br> <input id="btAgregar" type="button" name="btAgregar"
+				value="Agregar" onclick='Agregar()' /> <input id="btQuitar"
+				type="button" name="btQuitar" onclick='Quitar();'
+				value="Quitar" /> 
+			<br></br>
+			<script>
+				$("#btAgregar").button();
+				$("#btQuitar").button();
+			</script>
+		</div></td>
+
+</tr>
+
 
 {% endblock %}
